packagelon com.twittelonr.cr_mixelonr.similarity_elonnginelon

import com.twittelonr.cr_mixelonr.modelonl.SimilarityelonnginelonInfo
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithScorelon
import com.twittelonr.cr_mixelonr.param.ConsumelonrsBaselondUselonrVidelonoGraphParams
import com.twittelonr.cr_mixelonr.param.GlobalParams
import com.twittelonr.cr_mixelonr.thriftscala.SimilarityelonnginelonTypelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala.ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala.RelonlatelondTwelonelontRelonsponselon
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.timelonlinelons.configapi
import com.twittelonr.util.Futurelon
import javax.injelonct.Singlelonton

/**
 * This storelon uselons thelon graph baselond input (a list of uselonrIds)
 * to quelonry consumelonrsBaselondUselonrVidelonoGraph and gelont thelonir top elonngagelond twelonelonts
 */
@Singlelonton
caselon class ConsumelonrsBaselondUselonrVidelonoGraphSimilarityelonnginelon(
  consumelonrsBaselondUselonrVidelonoGraphStorelon: RelonadablelonStorelon[
    ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst,
    RelonlatelondTwelonelontRelonsponselon
  ],
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonadablelonStorelon[
      ConsumelonrsBaselondUselonrVidelonoGraphSimilarityelonnginelon.Quelonry,
      Selonq[TwelonelontWithScorelon]
    ] {

  ovelonrridelon delonf gelont(
    quelonry: ConsumelonrsBaselondUselonrVidelonoGraphSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    val consumelonrsBaselondRelonlatelondTwelonelontRelonquelonst =
      ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst(
        quelonry.selonelondWithScorelons.kelonySelont.toSelonq,
        maxRelonsults = Somelon(quelonry.maxRelonsults),
        minCooccurrelonncelon = Somelon(quelonry.minCooccurrelonncelon),
        minScorelon = Somelon(quelonry.minScorelon),
        maxTwelonelontAgelonInHours = Somelon(quelonry.maxTwelonelontAgelonInHours)
      )
    consumelonrsBaselondUselonrVidelonoGraphStorelon
      .gelont(consumelonrsBaselondRelonlatelondTwelonelontRelonquelonst)
      .map { relonlatelondTwelonelontRelonsponselonOpt =>
        relonlatelondTwelonelontRelonsponselonOpt.map { relonlatelondTwelonelontRelonsponselon =>
          relonlatelondTwelonelontRelonsponselon.twelonelonts.map { twelonelont =>
            TwelonelontWithScorelon(twelonelont.twelonelontId, twelonelont.scorelon)
          }
        }
      }
  }
}

objelonct ConsumelonrsBaselondUselonrVidelonoGraphSimilarityelonnginelon {

  caselon class Quelonry(
    selonelondWithScorelons: Map[UselonrId, Doublelon],
    maxRelonsults: Int,
    minCooccurrelonncelon: Int,
    minScorelon: Doublelon,
    maxTwelonelontAgelonInHours: Int)

  delonf toSimilarityelonnginelonInfo(
    scorelon: Doublelon
  ): SimilarityelonnginelonInfo = {
    SimilarityelonnginelonInfo(
      similarityelonnginelonTypelon = SimilarityelonnginelonTypelon.ConsumelonrsBaselondUselonrVidelonoGraph,
      modelonlId = Nonelon,
      scorelon = Somelon(scorelon))
  }

  delonf fromParamsForRelonalGraphIn(
    selonelondWithScorelons: Map[UselonrId, Doublelon],
    params: configapi.Params,
  ): elonnginelonQuelonry[Quelonry] = {

    elonnginelonQuelonry(
      Quelonry(
        selonelondWithScorelons = selonelondWithScorelons,
        maxRelonsults = params(GlobalParams.MaxCandidatelonNumPelonrSourcelonKelonyParam),
        minCooccurrelonncelon =
          params(ConsumelonrsBaselondUselonrVidelonoGraphParams.RelonalGraphInMinCoOccurrelonncelonParam),
        minScorelon = params(ConsumelonrsBaselondUselonrVidelonoGraphParams.RelonalGraphInMinScorelonParam),
        maxTwelonelontAgelonInHours = params(GlobalParams.MaxTwelonelontAgelonHoursParam).inHours
      ),
      params
    )
  }
}
