packagelon com.twittelonr.cr_mixelonr.similarity_elonnginelon

import com.twittelonr.cr_mixelonr.modelonl.SimilarityelonnginelonInfo
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithScorelon
import com.twittelonr.cr_mixelonr.param.GlobalParams
import com.twittelonr.cr_mixelonr.param.TwelonelontBaselondUselonrVidelonoGraphParams
import com.twittelonr.cr_mixelonr.thriftscala.SimilarityelonnginelonTypelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.frigatelon.common.util.StatsUtil
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala.RelonlatelondTwelonelontRelonsponselon
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala.ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala.TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala.UselonrVidelonoGraph
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.snowflakelon.id.SnowflakelonId
import com.twittelonr.timelonlinelons.configapi
import com.twittelonr.twistly.thriftscala.TwelonelontReloncelonntelonngagelondUselonrs
import com.twittelonr.util.Duration
import javax.injelonct.Singlelonton
import com.twittelonr.util.Futurelon
import com.twittelonr.util.Timelon
import scala.concurrelonnt.duration.HOURS

/**
 * This storelon looks for similar twelonelonts from UselonrVidelonoGraph for a Sourcelon TwelonelontId
 * For a quelonry twelonelont,Uselonr Videlono Graph (UVG),
 * lelonts us find out which othelonr videlono twelonelonts sharelon a lot of thelon samelon elonngagelonrs with thelon quelonry twelonelont
 */
@Singlelonton
caselon class TwelonelontBaselondUselonrVidelonoGraphSimilarityelonnginelon(
  uselonrVidelonoGraphSelonrvicelon: UselonrVidelonoGraph.MelonthodPelonrelonndpoint,
  twelonelontelonngagelondUselonrsStorelon: RelonadablelonStorelon[TwelonelontId, TwelonelontReloncelonntelonngagelondUselonrs],
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonadablelonStorelon[
      TwelonelontBaselondUselonrVidelonoGraphSimilarityelonnginelon.Quelonry,
      Selonq[TwelonelontWithScorelon]
    ] {

  import TwelonelontBaselondUselonrVidelonoGraphSimilarityelonnginelon._

  privatelon val stats = statsReloncelonivelonr.scopelon(this.gelontClass.gelontSimplelonNamelon)
  privatelon val felontchCandidatelonsStat = stats.scopelon("felontchCandidatelons")
  privatelon val felontchCovelonragelonelonxpansionCandidatelonsStat = stats.scopelon("felontchCovelonragelonelonxpansionCandidatelons")

  ovelonrridelon delonf gelont(
    quelonry: TwelonelontBaselondUselonrVidelonoGraphSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {

    quelonry.sourcelonId match {
      caselon IntelonrnalId.TwelonelontId(twelonelontId) if quelonry.elonnablelonCovelonragelonelonxpansionAllTwelonelont =>
        gelontCovelonragelonelonxpansionCandidatelons(twelonelontId, quelonry)

      caselon IntelonrnalId.TwelonelontId(twelonelontId) if quelonry.elonnablelonCovelonragelonelonxpansionOldTwelonelont => // For Homelon
        if (isOldTwelonelont(twelonelontId)) gelontCovelonragelonelonxpansionCandidatelons(twelonelontId, quelonry)
        elonlselon gelontCandidatelons(twelonelontId, quelonry)

      caselon IntelonrnalId.TwelonelontId(twelonelontId) => gelontCandidatelons(twelonelontId, quelonry)
      caselon _ =>
        Futurelon.valuelon(Nonelon)
    }
  }

  privatelon delonf gelontCandidatelons(
    twelonelontId: TwelonelontId,
    quelonry: TwelonelontBaselondUselonrVidelonoGraphSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    StatsUtil.trackOptionItelonmsStats(felontchCandidatelonsStat) {
      val twelonelontBaselondRelonlatelondTwelonelontRelonquelonst = {
        TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst(
          twelonelontId,
          maxRelonsults = Somelon(quelonry.maxRelonsults),
          minCooccurrelonncelon = Somelon(quelonry.minCooccurrelonncelon),
          elonxcludelonTwelonelontIds = Somelon(Selonq(twelonelontId)),
          minScorelon = Somelon(quelonry.twelonelontBaselondMinScorelon),
          maxTwelonelontAgelonInHours = Somelon(quelonry.maxTwelonelontAgelonInHours)
        )
      }
      toTwelonelontWithScorelon(
        uselonrVidelonoGraphSelonrvicelon.twelonelontBaselondRelonlatelondTwelonelonts(twelonelontBaselondRelonlatelondTwelonelontRelonquelonst).map {
          Somelon(_)
        })
    }
  }

  privatelon delonf gelontCovelonragelonelonxpansionCandidatelons(
    twelonelontId: TwelonelontId,
    quelonry: TwelonelontBaselondUselonrVidelonoGraphSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    StatsUtil
      .trackOptionItelonmsStats(felontchCovelonragelonelonxpansionCandidatelonsStat) {
        twelonelontelonngagelondUselonrsStorelon
          .gelont(twelonelontId).flatMap {
            _.map { twelonelontReloncelonntelonngagelondUselonrs =>
              val consumelonrSelonelondSelont =
                twelonelontReloncelonntelonngagelondUselonrs.reloncelonntelonngagelondUselonrs
                  .map {
                    _.uselonrId
                  }.takelon(quelonry.maxConsumelonrSelonelondsNum)
              val consumelonrsBaselondRelonlatelondTwelonelontRelonquelonst =
                ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst(
                  consumelonrSelonelondSelont = consumelonrSelonelondSelont,
                  maxRelonsults = Somelon(quelonry.maxRelonsults),
                  minCooccurrelonncelon = Somelon(quelonry.minCooccurrelonncelon),
                  elonxcludelonTwelonelontIds = Somelon(Selonq(twelonelontId)),
                  minScorelon = Somelon(quelonry.consumelonrsBaselondMinScorelon),
                  maxTwelonelontAgelonInHours = Somelon(quelonry.maxTwelonelontAgelonInHours)
                )

              toTwelonelontWithScorelon(uselonrVidelonoGraphSelonrvicelon
                .consumelonrsBaselondRelonlatelondTwelonelonts(consumelonrsBaselondRelonlatelondTwelonelontRelonquelonst).map {
                  Somelon(_)
                })
            }.gelontOrelonlselon(Futurelon.valuelon(Nonelon))
          }
      }
  }

}

objelonct TwelonelontBaselondUselonrVidelonoGraphSimilarityelonnginelon {

  privatelon val oldTwelonelontCap: Duration = Duration(24, HOURS)

  delonf toSimilarityelonnginelonInfo(scorelon: Doublelon): SimilarityelonnginelonInfo = {
    SimilarityelonnginelonInfo(
      similarityelonnginelonTypelon = SimilarityelonnginelonTypelon.TwelonelontBaselondUselonrVidelonoGraph,
      modelonlId = Nonelon,
      scorelon = Somelon(scorelon))
  }

  privatelon delonf toTwelonelontWithScorelon(
    relonlatelondTwelonelontRelonsponselonFut: Futurelon[Option[RelonlatelondTwelonelontRelonsponselon]]
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    relonlatelondTwelonelontRelonsponselonFut.map { relonlatelondTwelonelontRelonsponselonOpt =>
      relonlatelondTwelonelontRelonsponselonOpt.map { relonlatelondTwelonelontRelonsponselon =>
        val candidatelons =
          relonlatelondTwelonelontRelonsponselon.twelonelonts.map(twelonelont => TwelonelontWithScorelon(twelonelont.twelonelontId, twelonelont.scorelon))
        candidatelons
      }
    }
  }

  privatelon delonf isOldTwelonelont(twelonelontId: TwelonelontId): Boolelonan = {
    SnowflakelonId
      .timelonFromIdOpt(twelonelontId).forall { twelonelontTimelon => twelonelontTimelon < Timelon.now - oldTwelonelontCap }
    // If thelonrelon's no snowflakelon timelonstamp, welon havelon no idelona whelonn this twelonelont happelonnelond.
  }

  caselon class Quelonry(
    sourcelonId: IntelonrnalId,
    maxRelonsults: Int,
    minCooccurrelonncelon: Int,
    twelonelontBaselondMinScorelon: Doublelon,
    consumelonrsBaselondMinScorelon: Doublelon,
    maxTwelonelontAgelonInHours: Int,
    maxConsumelonrSelonelondsNum: Int,
    elonnablelonCovelonragelonelonxpansionOldTwelonelont: Boolelonan,
    elonnablelonCovelonragelonelonxpansionAllTwelonelont: Boolelonan)

  delonf fromParams(
    sourcelonId: IntelonrnalId,
    params: configapi.Params,
  ): elonnginelonQuelonry[Quelonry] = {
    elonnginelonQuelonry(
      Quelonry(
        sourcelonId = sourcelonId,
        maxRelonsults = params(GlobalParams.MaxCandidatelonNumPelonrSourcelonKelonyParam),
        minCooccurrelonncelon = params(TwelonelontBaselondUselonrVidelonoGraphParams.MinCoOccurrelonncelonParam),
        twelonelontBaselondMinScorelon = params(TwelonelontBaselondUselonrVidelonoGraphParams.TwelonelontBaselondMinScorelonParam),
        consumelonrsBaselondMinScorelon = params(TwelonelontBaselondUselonrVidelonoGraphParams.ConsumelonrsBaselondMinScorelonParam),
        maxTwelonelontAgelonInHours = params(GlobalParams.MaxTwelonelontAgelonHoursParam).inHours,
        maxConsumelonrSelonelondsNum = params(TwelonelontBaselondUselonrVidelonoGraphParams.MaxConsumelonrSelonelondsNumParam),
        elonnablelonCovelonragelonelonxpansionOldTwelonelont =
          params(TwelonelontBaselondUselonrVidelonoGraphParams.elonnablelonCovelonragelonelonxpansionOldTwelonelontParam),
        elonnablelonCovelonragelonelonxpansionAllTwelonelont =
          params(TwelonelontBaselondUselonrVidelonoGraphParams.elonnablelonCovelonragelonelonxpansionAllTwelonelontParam)
      ),
      params
    )
  }

}
